<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/productCheckFragment"
            android:icon="@drawable/ic_productcheck"
            android:title="@string/product_check" />
        <item
            android:id="@+id/prayTimesFragment"
            android:icon="@drawable/ic_prayertime"
            android:title="@string/pray_times" />
        <item
            android:id="@+id/manualFragment"
            android:icon="@drawable/ic_manual"
            android:title="@string/Manual" />
        <item
            android:id="@+id/explanationFragment"
            android:icon="@drawable/ic_explanation"
            android:title="@string/what_is_halal_product" />
    </group>

</menu>